# cpp_portoflio

dodatkowy/: CMakeLists.txt  mail_handler.cpp  mail_handler.h  main.cpp
mail_with_chatGPT/: CMakeLists.txt  README.md  mail_handler.cpp  mail_handler.h  main.cpp
